# myproject

./: .env  pyproject.toml
src/myproject/: main.py
